work on user component and sidenav and service

--- a/front-end/src/app/layout/content-layout/content-layout.component.html
+++ b/front-end/src/app/layout/content-layout/content-layout.component.html
@@ -6,8 +6,11 @@
 
     <div class="app-container">
 
-      <div class="app-container__body">
+      <div class="app-container__body app-container">
+       
         <router-outlet></router-outlet>
+      
+       
       </div>
     </div>
   </div>
