--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -1,1 +1,12 @@
-<router-outlet></router-outlet>
+<mat-drawer-container class="example-container" [hasBackdrop]="true" autosize>
+    <mat-drawer #drawer mode="over"  class="main-div-sidenav">
+        
+        <div appComponentPlaceHolder></div>
+
+    </mat-drawer>
+    <mat-drawer-content>
+
+        <router-outlet></router-outlet>
+
+    </mat-drawer-content>
+</mat-drawer-container>
