work on filter and delete confirm and toast

--- a/front-end/src/app/modules/user/user-list/user-list.component.css
+++ b/front-end/src/app/modules/user/user-list/user-list.component.css
@@ -9,3 +9,12 @@ table {
 .demo-button+.demo-button {
     margin-left: 8px;
 }
+
+.div-options {
+    display: flex;
+    justify-content: space-between;
+}
+
+.search-input {
+    height: 1rem;
+}
