--- a/front-end/src/app/modules/user/user-info/user-info.component.html
+++ b/front-end/src/app/modules/user/user-info/user-info.component.html
@@ -1,4 +1,4 @@
-<form class="form">
+<form class="form" #saveForm="ngForm" (ngSubmit)="saveForm.valid && Save(saveForm)">
    
     <mat-form-field class="example-form-field">
         <mat-label>Name</mat-label>
@@ -7,18 +7,15 @@
 
     <mat-form-field class="example-form-field">
         <mat-label>Email</mat-label>
-        <input matInput type="email" required name="email" [(ngModel)]="userData.email"  autocomplete="off" >
-        <!-- <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')"> [formControl]="emailFormControl"
+        <input matInput type="email" required name="email" #email="ngModel" [(ngModel)]="userData.email" [email]="true"  autocomplete="off" >
+        <mat-error *ngIf="email.hasError('email')">
             Please enter a valid email address
           </mat-error>
-          <mat-error *ngIf="emailFormControl.hasError('required')">
-            Email is <strong>required</strong>
-          </mat-error> -->
     </mat-form-field>
 
     <div class="div-btn">
-        <button mat-raised-button (click)="cancel()">Cancel</button>
-        <button mat-raised-button color="accent"  (click)="Save()">Save</button>
+        <button mat-raised-button (click)="cancel(saveForm)">Cancel</button>
+        <button mat-raised-button color="accent" type="submit">Save</button>
     </div>
 
 </form>
