--- a/front-end/src/app/shared/confirm-dialog/confirm-dialog.component.html
+++ b/front-end/src/app/shared/confirm-dialog/confirm-dialog.component.html
@@ -3,7 +3,7 @@
   Would you like to delete this Item?
 </div>
 <div mat-dialog-actions>
-  <button mat-button mat-dialog-close (click)="onCancel()">No</button>
-  <button mat-button mat-dialog-close cdkFocusInitial (click)="onConfirm()">Ok</button>
+  <button mat-flat-button mat-dialog-close (click)="onCancel()">No</button>
+  <button mat-flat-button mat-dialog-close cdkFocusInitial [mat-dialog-close]="true">Ok</button>
 </div>
 
